@@ -1,5 +1,7 @@
 === HEAD
 
+* Don't remove column value when validating nested attributes for one_to_* association where association foreign key is the model's primary key (jeremyevans)
+
 * Add Dataset#disable_insert_returning on PostgreSQL for skipping implicit use of RETURNING (jeremyevans)
 
 * Automatically optimize Model.[], .with_pk, and .with_pk! for models with composite keys (jeremyevans)
